--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -203,7 +203,7 @@ ja:
     formats:
       default: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
       long: "%Y/%m/%d %H:%M"
-      short: "%m/%d %H:%M"
+      short: "%m/%d(%a) %H:%M"
     pm: 午後
 
   #  attributes:
